Focus on improving accessibility, mainly colors

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,10 +17,11 @@
 <style>
     .header {
         height: 70px;
-        background-color: var(--color-secondary);
+        background-color: var(--color-background);
         font-family: 'Calibri', sans-serif;
         font-size: 1.5rem;
         font-weight: bold;
+        border-bottom: 1px solid;
     }
     
     .header .container {
@@ -42,6 +43,7 @@
     }
 
     .header a {
+        text-decoration: none;
         color: var(--color-text);
     }
     /* @media screen and (max-width: 650px) {
