--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -28,9 +28,8 @@ const {text} = Astro.props as Props;
 
     .tooltip-content {
         display: none;
-        background-color: var(--color-tertiary);
+        background-color: var(--color-background);
         text-align: center;
-        background-color: var(--color-tertiary);
         border-color: #555555;
         border-style: solid;
         border-radius: 10px;
