--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -154,7 +154,7 @@ SeparateTags();
 
     .searchBar input {
         width: 100% ;
-        background-color: var(--color-tertiary);
+        background-color: var(--color-background);
         border-radius: 0.7rem;
         border-color: #555555;
         border-style: solid;
@@ -174,7 +174,7 @@ SeparateTags();
 
     #openFilterPanelBtn {
         margin-left: 20px;
-        background-color: var(--color-tertiary);
+        background-color: var(--color-accent);
         border-radius: 0.7rem;
         border-color: #555555;
         border-style: solid;
@@ -211,7 +211,7 @@ SeparateTags();
         border-radius: 50%;
         width: 2em;
         aspect-ratio: 1 / 1;
-        background-color: var(--color-primary);
+        background-color: var(--color-btn);
     }
 
     #closeFilterPanelBtn:hover {
