--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 
 import TagDisplay from "../components/TagDisplay.astro";
-import { CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection } from "astro:content";
 import { Tags } from "../others/tags";
 import TableOfContent from "../components/TableOfContent.astro";
 
