--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -80,7 +80,7 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         <div class="container">
             <div class="card">
                 <h1>{data.title}</h1>
-                <Image src={data.thumbnailPath} alt={data.title + " image"}>
+                <img src={data.thumbnailPath.src} alt={data.title + " image"}>
                 <div style="height: 25px;"></div> <!-- Small block to separate img and tags -->
                 <TagDisplay tags={data.tags} project={data.title}/>
                 { data.startDate &&
