Fix big spaces between images

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -134,6 +134,7 @@ function dateDiff(startDate: Date, endDate: Date) : string {
     
     .markdown img {
         width: 100%;
+        height: unset;
         max-width: 500px;
         max-height: 100vh;
         margin: 20px auto;
