Fix Search by tags.

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -80,6 +80,8 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         <div class="container">
             <div class="card">
                 <h1>{data.title}</h1>
+                <!-- TODO: Change to use Astro's <Image /> Not
+                     Not sure why last time Astro v3.0.3, any content after <Image /> was gone. Might be a bug -->
                 <img src={data.thumbnailPath.src} alt={data.title + " image"}>
                 <div style="height: 25px;"></div> <!-- Small block to separate img and tags -->
                 <TagDisplay tags={data.tags} project={data.title}/>
